# macronizer

./: Cargo.toml  Dockerfile  README.md  kwaak.toml
.cargo/: config.toml
macronizer/: Cargo.toml
src/: config.rs  lib.rs  macronizer.rs  main.rs  main_test.rs  settings.rs  tests.rs
tests/: macronizer_tests.rs
