[package]
name = "macronizer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.0"
rdev = "0.5"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "*"
mockall = "0.10"
# Using tinyaudio with default features disabled to avoid ALSA issues in this environment
# Removed unsupported "cpal" feature
tinyaudio = { git = "https://github.com/mrDIMAS/tinyaudio.git", default-features = false }
