[package]
name = "macronizer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.0"
rdev = {version = "0.5", features = ["serialize"]}
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "*"
mockall = "0.10"
tinyaudio = "1.1.0"
config = { version = "0.15.6", features = ["toml", "convert-case"] }
anyhow = "1"
home = "0.5.11"
